[package]
name = "mollOSc"
version = "0.1.0"
edition = "2021"
authors = ["Melody Aichroy-Wuyts <maichroywuyts@gmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
